--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,22 @@ body {
     color: black;
 }
 
+@media (max-width: 480px) {
+    html {
+      margin-top: 30%;
+      align-items: flex-start;
+    }
+    body {
+        padding: 0 5%;
+    }
+    i, a {
+      font-size: 1.3rem;
+    }
+}
+
 h1 {
     line-height: 2rem;
 }
-
 
 .social-container{
     display: flex;
