--- a/styles.css
+++ b/styles.css
@@ -47,3 +47,12 @@ a {
 a:visited {
     color: black;
 }
+
+@media (prefers-color-scheme: dark) {
+    html, img, video, iframe {
+        filter: invert(.9) hue-rotate(180deg);
+    }
+    body {
+        background-color: white;
+    }
+}
